--- a/config/workload.yaml
+++ b/config/workload.yaml
@@ -6,19 +6,19 @@ metadata:
     app.kubernetes.io/part-of: python-pipenv
     apps.tanzu.vmware.com/has-tests: "true"
     apps.tanzu.vmware.com/workload-type: web
-  name: python-pipenv-vulnerable
-  namespace: dev
+  name: moad-vulnerable
+  namespace: moad
 spec:
   params:
-  - name: annotations
-    value:
-      autoscaling.knative.dev/minScale: "1"
-  - name: testing_pipeline_matching_labels
-    value:
-      apps.tanzu.vmware.com/language: python
-      apps.tanzu.vmware.com/pipeline: test
+    - name: annotations
+      value:
+        autoscaling.knative.dev/minScale: "1"
+    - name: testing_pipeline_matching_labels
+      value:
+        apps.tanzu.vmware.com/language: python
+        apps.tanzu.vmware.com/pipeline: test
   source:
     git:
       ref:
         branch: vulnerable
-      url: https://github.com/benwilcock/python-pipenv
+      url: https://github.com/mylesagray/python-pipenv
