--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@
 -i https://pypi.python.org/simple
 click==8.1.3; python_version >= '3.7'
 flask==2.2.2
+ffmpeg==1.4
 gunicorn==20.1.0
 itsdangerous==2.1.2; python_version >= '3.7'
 jinja2==3.1.2; python_version >= '3.7'
